Fixing liquid layout issues + index.html update

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2,12 +2,12 @@
 ---
 header h1 {
    min-width: 100%;
-   font-size: 50px;
+   font-size: 300%;
+   white-space: normal;
    overflow: visible;
    color: #FFE788;
 }
 .page-title {
-   min-width: 100%;
    color: #fafafa;
    background-color: #4276b6;
    text-align: center;
@@ -35,14 +35,30 @@ header h1 {
     float: right;
     }
 }
- #banner
 .button {
-   width: 15%;
-   min-width: 200px;
-   display: inline-block;
-   padding: 5%;
-   margin: 5% auto;
+border: 1px solid #dba500;
+background: linear_gradient(#ffe788, #ffce38);
+border-radius: 2px;
+box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4), 0px 1px 1px rgba(0,0,0,0.1);
+background-color: #FFE788;
+width: 15%;
+min-width: 200px;
+display: inline-block;
+padding: 5%;
+margin: 5% auto;
+color: #333;
+font-weight: bold;
+display: inline-block;
+text-align: center;
 }
+nav.main-navigation {
+    width: 30%;
+    float: left;
+}
+.wrapper {
+    width: 70%;
+    float: right;
+    }
 .clearfix:after {
    clear: both;
    display: table;
